--- a/libraries/loader.html
+++ b/libraries/loader.html
@@ -58,29 +58,29 @@ Loader 類別
 
 <h1>Loader 類別</h1>
 
-<p>Loader，as the name suggests，is used to load elements.  These elements can be libraries (classes) <a href="../general/views.html">View files</a>,
-<a href="../general/helpers.html">補助函數</a>，<a href="../general/plugins.html">Plugins</a>，or your own files.</p>
+<p>Loader,as the name suggests,is used to load elements.  These elements can be libraries (classes) <a href="../general/views.html">View files</a>,
+<a href="../general/helpers.html">補助函數</a>,<a href="../general/plugins.html">Plugins</a>,or your own files.</p>
 
 <p class="important"><strong>注意:</strong> This class is initialized automatically by the system so there is no need to do it manually.</p>
 
 <p>The following functions are available in this class:</p>
 
 
-<h2>$this->load->library('<var>class_name</var>'，<samp>$config</samp>，<kbd>'object name'</kbd>)</h2>
+<h2>$this->load->library('<var>class_name</var>',<samp>$config</samp>,<kbd>'object name'</kbd>)</h2>
 
 
 <p>This function is used to load core classes.  Where <var>class_name</var> is the name of the class you want to load.
 注意: We use the terms "class" and "library" interchangeably.</p>
 
-<p>For example，if you would like to send email with CodeIgniter，the first step is to load the email class within your controller:</p>
+<p>For example,if you would like to send email with CodeIgniter,the first step is to load the email class within your controller:</p>
 
 <code>$this->load->library('email');</code>
 
-<p>Once loaded，the library will be ready for use，using <kbd>$this->email-></kbd><samp><em>some_function</em>()</samp>.
+<p>Once loaded,the library will be ready for use,using <kbd>$this->email-></kbd><samp><em>some_function</em>()</samp>.
 
-<p>Library files can be stored in subdirectories within the main "libraries" folder，or within your personal <dfn>application/libraries</dfn> folder.  
-To load a file located in a subdirectory，simply include the path，relative to the "libraries" folder.  
-For example，if you have file located at:</p>
+<p>Library files can be stored in subdirectories within the main "libraries" folder,or within your personal <dfn>application/libraries</dfn> folder.  
+To load a file located in a subdirectory,simply include the path,relative to the "libraries" folder.  
+For example,if you have file located at:</p>
 
 <code>libraries/flavors/chocolate.php</code>
 
@@ -101,18 +101,18 @@ $config = array (<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'priority' => '1'<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;);<br />
 <br />
-$this->load->library('email'，$config);</code>
+$this->load->library('email',$config);</code>
 
-<p>Config options can usually also be set via a config file. Each library is explained in detail in its own page，so please read the information regarding each one you would like to use.</p>
+<p>Config options can usually also be set via a config file. Each library is explained in detail in its own page,so please read the information regarding each one you would like to use.</p>
 
 <h3>Assigning a Library to a different object name</h3>
 
-<p>If the third (optional) parameter is blank，the library will usually be assigned to an object with the same name as the library.  For example，if the library is named <dfn>Session</dfn>，it
+<p>If the third (optional) parameter is blank,the library will usually be assigned to an object with the same name as the library.  For example,if the library is named <dfn>Session</dfn>,it
 will be assigned to a variable named <dfn>$this->session</dfn>.</p>
 
 <p>If you prefer to set your own class names you can pass its value to the third parameter:</p>
 
-<code>$this->load->library('session'，''，'my_session');<br /><br />
+<code>$this->load->library('session','','my_session');<br /><br />
 
 // Session class is now accessed using:<br /><br />
 
@@ -122,7 +122,7 @@ $this->my_session
 
 
 
-<h2>$this->load->view('<var>file_name</var>'，<samp>$data</samp>，<kbd>true/false</kbd>)</h2>
+<h2>$this->load->view('<var>file_name</var>',<samp>$data</samp>,<kbd>true/false</kbd>)</h2>
 
 <p>This function is used to load your View files.  If you haven't read the <a href="../general/views.html">Views</a> section of the
 user guide it is recommended that you do since it shows you how this function is typically used.</p>
@@ -130,28 +130,28 @@ user guide it is recommended that you do since it shows you how this function is
 <p>The first parameter is required.  It is the name of the view file you would like to load. &nbsp;注意: The .php file extension does not need to be specified unless you use something other than <kbd>.php</kbd>.</p>
 
 <p>The second <strong>optional</strong> parameter can take
-an associative array or an object as input，which it runs through the PHP <a href="http://www.php.net/extract">extract</a> function to
-convert to variables that can be used in your view files.  Again，read the <a href="../general/views.html">Views</a> page to learn
+an associative array or an object as input,which it runs through the PHP <a href="http://www.php.net/extract">extract</a> function to
+convert to variables that can be used in your view files.  Again,read the <a href="../general/views.html">Views</a> page to learn
 how this might be useful.</p>
 
 <p>The third <strong>optional</strong> parameter lets you change the behavior of the function so that it returns data as a string
 rather than sending it to your browser.  This can be useful if you want to process the data in some way.  If you
-set the parameter to <kbd>true</kbd> (boolean) it will return data.  The default behavior is <kbd>false</kbd>，which sends it
+set the parameter to <kbd>true</kbd> (boolean) it will return data.  The default behavior is <kbd>false</kbd>,which sends it
 to your browser.  Remember to assign it to a variable if you want the data returned:</p>
 
-<code>$string = $this->load->view('<var>myfile</var>'，''，<kbd>true</kbd>);</code>
+<code>$string = $this->load->view('<var>myfile</var>','',<kbd>true</kbd>);</code>
 
 
 <h2>$this-&gt;load-&gt;model('<var>Model_name</var>');</h2>
 <p><code>$this-&gt;load-&gt;model('<var>Model_name</var>');</code></p>
-<p>If your model is located in a sub-folder，include the relative path from your models folder. For example，if you have a model located at application/models/blog/queries.php you'll load it using:</p>
+<p>If your model is located in a sub-folder,include the relative path from your models folder. For example,if you have a model located at application/models/blog/queries.php you'll load it using:</p>
 <p><code>$this-&gt;load-&gt;model('<var>blog/queries</var>');</code></p>
 <p>If you would like your model assigned to a different object name you can specify it via the second parameter of the loading
 	function:</p>
-<code> $this-&gt;load-&gt;model('<var>Model_name</var>'，'<kbd>fubar</kbd>');<br />
+<code> $this-&gt;load-&gt;model('<var>Model_name</var>','<kbd>fubar</kbd>');<br />
 <br />
 $this-&gt;<kbd>fubar</kbd>-&gt;function();</code>
-<h2>$this->load->database('<var>options</var>'，<kbd>true/false</kbd>)</h2>
+<h2>$this->load->database('<var>options</var>',<kbd>true/false</kbd>)</h2>
 <p>This function lets you load the database class.  The two parameters are <strong>optional</strong>.  Please see the
 <a href="../database/index.html">database</a> section for more info.</p>
 
@@ -174,15 +174,15 @@ and merged into one array for conversion to variables.
 
 
 <h2>$this->load->helper('<var>file_name</var>')</h2>
-<p>此函數載入 helper 檔案，<var>file_name</var> 檔名後面請不要加上 <kbd>_helper.php</kbd>。</p>
+<p>此函數載入 helper 檔案,<var>file_name</var> 檔名後面請不要加上 <kbd>_helper.php</kbd>。</p>
 
 
 <h2>$this->load->plugin('<var>file_name</var>')</h2>
-<p>此函數載入 plugins 檔案，<var>file_name</var> 檔名後面請不要加上 <kbd>_plugin.php</kbd>。</p>
+<p>此函數載入 plugins 檔案,<var>file_name</var> 檔名後面請不要加上 <kbd>_plugin.php</kbd>。</p>
 
-<h2>$this->load->file('<var>filepath/filename</var>'，<kbd>true/false</kbd>)</h2>
-<p>這是一般的載入函數。簡單的設定第一個參數路徑及檔案名稱，系統將會打開此檔案。就像是瀏覽檔案一樣，預設值會直接呈現在瀏覽器畫面，
-如果設定第二個參數為<kbd>true</kbd> (boolean)，它將會把檔案內容存放在變數裡面。</p>
+<h2>$this->load->file('<var>filepath/filename</var>',<kbd>true/false</kbd>)</h2>
+<p>這是一般的載入函數。簡單的設定第一個參數路徑及檔案名稱,系統將會打開此檔案。就像是瀏覽檔案一樣,預設值會直接呈現在瀏覽器畫面,
+如果設定第二個參數為<kbd>true</kbd> (boolean),它將會把檔案內容存放在變數裡面。</p>
 
 
 <h2>$this->load->lang('<var>file_name</var>')</h2>
@@ -206,7 +206,7 @@ and merged into one array for conversion to variables.
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 下個主題:&nbsp;&nbsp;<a href="language.html">Language 類別</a>
 </p>
-<p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
+<p><a href="http://ci.wuboy.twbbs.org">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2009 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab,Inc.</a></p>
 </div>
 
 <script type="text/javascript">
