translate general/credits.html completly

--- a/general/common_functions.html
+++ b/general/common_functions.html
@@ -70,7 +70,7 @@ else<br />
 }</code>
 <h2>config_item('<var>item_key</var>')</h2>
 <p><a href="../libraries/config.html">Config library</a> 是存取設定資訊時建議使用的方法，不過 config_item() 也能用來取得單獨的鍵值。參閱 <a href="../libraries/config.html">Config library</a> 文件來獲得更多資訊。</p>
-<h2>show_error('<var>message</var>')，show_404('<var>page</var>')，log_message('<var>level</var>'，'<samp>message</samp>')</h2>
+<h2>show_error('<var>message</var>'), show_404('<var>page</var>')，log_message('<var>level</var>', '<samp>message</samp>')</h2>
 <p>這些在 <a href="errors.html">錯誤處理</a> 文件中有說明。</p>
 </div>
 <!-- END CONTENT -->
