--- a/general/controllers.html
+++ b/general/controllers.html
@@ -187,7 +187,7 @@ class Blog extends Controller {
 &lt;?php<br />
 class Products extends Controller {<br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;function shoes($sandals，$id)<br />
+&nbsp;&nbsp;&nbsp;&nbsp;function shoes($sandals, $id)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;{<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;echo $sandals;<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;echo $id;<br />
