--- a/general/credits.html
+++ b/general/credits.html
@@ -57,15 +57,11 @@
 
 <h1>所有權宣告</h1>
 
-<p>CodeIgniter was originally developed by <a href="http://www.ellislab.com/">Rick Ellis</a> (CEO of
-<a href="http://ellislab.com/">Ellislab, Inc.</a>).  The framework was written for performance in the real 
-world，with many of the class libraries，helpers，and sub-systems borrowed from the code-base of 
-<a href="http://www.expressionengine.com/">ExpressionEngine</a>.</p>
+<p>CodeIgniter 最早是由 <a href="http://www.ellislab.com/">Rick Ellis</a> 開發的 (<a href="http://ellislab.com/">Ellislab</a> 公司的 CEO)。此框架針對效能性開發了許多物件類別函式庫及輔助函數(helpers)，以及參考 <a href="http://www.expressionengine.com/">ExpressionEngine</a> 基底開發子系統。</p>
 
-<p>It is currently developed and maintained by the ExpressionEngine Development Team.</p>
+<p>CodeIgniter 目前由 ExpressionEngine 開發團隊開發並維護。</p>
 
-<p>A hat tip goes to Ruby on Rails for inspiring us to create a PHP framework，and for
-bringing frameworks into the general consciousness of the web community.</p>
+<p>來自 Ruby on Rails 的靈感啟發我們創造了一個 PHP 框架，並且將框架的概念帶入到網絡世界。</p>
 
 </div>
 <!-- END CONTENT -->
