Update: add changelog for 1.7.3

--- a/changelog.html
+++ b/changelog.html
@@ -58,10 +58,11 @@
 <h1>版本紀錄</h1>
 
 <h2>版本 1.7.3</h2>
-<p>發佈日期: 尚未發佈<br />
-SVN 版本: </p>
+<p>發佈日期: 2010年12月06日</p>
+<p>Version 1.7.3 is a security maintenance release, including a previously patched file Upload class, and a new security fix to prevent possible directory traversal in certain circumstances.  There are no other significant changes.</p>
 
-<h2>版本 1.7.3</h2>
+
+<h2>版本 1.7.2</h2>
 <p>發佈日期: 2009年9月11日<br />
 SVN 版本: 1737</p>
 
