Update: toc and js menu

--- a/toc.html
+++ b/toc.html
@@ -81,7 +81,7 @@
 <ul>
 	<li><a href="./overview/getting_started.html">入門</a></li>
 	<li><a href="./overview/at_a_glance.html">CodeIgniter 匆匆一瞥</a></li>
-	<li><a href="./overview/cheatsheets.html">CodeIgniter Cheatsheets</a></li>
+	<li><a href="./overview/cheatsheets.html">CodeIgniter 備忘錄</a></li>
 	<li><a href="./overview/features.html">支援功能</a></li>
 	<li><a href="./overview/appflow.html">程式流程圖</a></li>
 	<li><a href="./overview/mvc.html">模型-檢視-控制器</a></li>
