Update: installation and overview menu

--- a/installation/downloads.html
+++ b/installation/downloads.html
@@ -58,8 +58,9 @@
 <h1>下載 CodeIgniter</h1>
 
 <ul>
-<li><a href="http://www.codeigniter.com/download.php">CodeIgniter V 1.7.3 (目前版本)</a></li>
-<li><a href="http://www.codeigniter.com/download_files/CodeIgniter_1.7.2.zip">CodeIgniter V 1.7.2</a></li>
+<li><a href="http://www.codeigniter.com/download.php">CodeIgniter V 2.0.0 (目前版本)</a></li>
+<li><a href="http://www.codeigniter.org.tw/download_files/CodeIgniter_1.7.3.zip">CodeIgniter V 1.7.3</a></li>
+<li><a href="http://www.codeigniter.org.tw/download_files/CodeIgniter_1.7.2.zip">CodeIgniter V 1.7.2</a></li>
 <li><a href="http://www.codeigniter.com/download_files/CodeIgniter_1.7.1.zip">CodeIgniter V 1.7.1</a></li>
 <li><a href="http://www.codeigniter.com/download_files/CodeIgniter_1.7.0.zip">CodeIgniter V 1.7.0</a></li>
 <li><a href="http://www.codeigniter.com/download_files/CodeIgniter_1.6.3.zip">CodeIgniter V 1.6.3</a></li>
@@ -80,14 +81,14 @@
 <li><a href="http://www.codeigniter.com/download_files/CodeIgniter_1.0b.zip">CodeIgniter V 1.0</a></li>
 </ul>
 
+<h1 id="hg">Mercurial Server</h1>
+<p><a href="http://mercurial.selenic.com">Mercurial</a> is a distributed version control system.</p>
 
+<p>Public Hg access is available at <a href="http://bitbucket.org/ellislab/codeigniter/">BitBucket</a>.
+	Please note that while every effort is made to keep this code base functional, we cannot guarantee the functionality of code taken
+	from the tip.</p>
 
-
-<h1><a name="svn" id="svn"></a>Subversion 伺服器</h1>
-<p><a href="http://subversion.tigris.org">Subversion</a> 為版本控制系統。 </p>
-<p>程式碼可由公開的 subversion 伺服器 <a href="http://dev.ellislab.com/svn/CodeIgniter/trunk">http://dev.ellislab.com/svn/CodeIgniter/trunk</a> 取得。請注意我們所有全力撰寫的程式都是要維持程式功能正常運作，但我們無法保證從這個儲存庫取得的程式，它的功能可以完全運作正常。</p>
-
-<p>version 1.6.1 之後的程式，也可由此 <a href="http://dev.ellislab.com/svn/CodeIgniter/tags">http://dev.ellislab.com/svn/CodeIgniter/tags</a>取得。</p>
+<p>Beginning with version 1.6.1, stable tags are also available via BitBucket, simply select the version from the Tags dropdown.</p>
 </div>
 <!-- END CONTENT -->
 
