--- a/overview/at_a_glance.html
+++ b/overview/at_a_glance.html
@@ -65,12 +65,6 @@
 <h2>CodeIgniter 可自由取得</h2>
 <p>CodeIgniter 採用 Apache/BSD-style open source license 授權，所以你可以隨心所欲使用。詳細的授權內容請閱讀 <a href="../license.html">許可協議</a>。</p>
 
-
-<h2>CodeIgniter 可在 PHP 4 上運作</h2>
-<p>CodeIgniter 相容於 PHP4。雖然用 PHP5 的物件處理可以簡化我們解決一些難題，但在寫這個系統時，PHP5 還未廣為使用，使用 PHP4 可以避免孤立我們大半的用戶。主要的系統供應商像是 Redhat 支援 PHP5 的速度還蠻慢的，短期內也沒有支援的打算，所以我們覺得他們對 PHP 社群在 PHP5 開發 CodeIgniter 並沒有什麼太大的興趣。</p>
-
-<p>注意:  CodeIgniter 支援 PHP 5，只是沒有使用它內建的功能。 </p>
-
 <h2>CodeIgniter 很輕盈</h2>
 <p>真的非常輕盈。核心系統只需要少量的程式庫，比較啟需要很多資源的 framework 是很明顯的對比。不過額外的程式庫，還是可以依造需求動態的載入近來、所以基本系統是相當精簡且快速。
 </p>
@@ -94,7 +88,7 @@
 <p>CodeIgniter 具有各種程式庫可滿足常見網站開發需求，像是資料庫存取、收發信件、表單資料驗證、session 管制、影像處理、處理 XML-RPC 資料等。</p>
 
 <h2>CodeIgniter 具有延展性</h2>
-<p>系統可以很簡單的延伸，透過使用 plugins、helper libraries、class extensions 或是 system hooks。</p>
+<p>系統可以很簡單的延伸，透過使用 helper libraries、class extensions 或是 system hooks。</p>
 
 
 <h2>CodeIgniter 不需要樣板引擎</h2>
