--- a/overview/features.html
+++ b/overview/features.html
@@ -66,7 +66,6 @@ CodeIgniter is child's play so we encourage you to do just that.  In the mean ti
 
 <ul>
 <li>基本 模型(Model)-檢視(View)-控制器(Controller) 系統</li>
-<li>相容於 PHP 4 系統</li>
 <li>超輕量級</li>
 <li>Full Featured database classes with support for several platforms.</li>
 <li>Active Record 資料庫支援</li>
@@ -84,7 +83,6 @@ CodeIgniter is child's play so we encourage you to do just that.  In the mean ti
 <li>網頁快取</li>
 <li>錯誤紀錄</li>
 <li>Application Profiling</li>
-<li>Scaffolding</li>
 <li>日曆(Calendaring)類別</li>
 <li>User Agent 類別</li>
 <li>Zip 編碼類別</li>
@@ -94,7 +92,7 @@ CodeIgniter is child's play so we encourage you to do just that.  In the mean ti
 <li>Unit Testing Class</li>
 <li>Search-engine Friendly URLs</li>
 <li>Flexible URI Routing</li>
-<li>Support for Hooks，Class Extensions，and Plugins</li>
+<li>Support for Hooks，Class Extensions</li>
 <li>大量的補助函數</li>
 </ul>
 
