--- a/toc.html
+++ b/toc.html
@@ -67,14 +67,14 @@
 	<li><a href="license.html">許可協議</a></li>
 	<li><a href="changelog.html">版本紀錄</a></li>
 	<li><a href="./general/credits.html">所有權宣告</a></li>
-</ul> 	
+</ul>
 
 <h3>安裝</h3>
 <ul>
 	<li><a href="./installation/downloads.html">下載 CodeIgniter </a></li>
 	<li><a href="./installation/index.html">安裝指引</a></li>
-	<li><a href="./installation/upgrading.html">更新</a></li>
-	<li><a href="./installation/troubleshooting.html">除錯</a></li>
+	<li><a href="./installation/upgrading.html">升級版本</a></li>
+	<li><a href="./installation/troubleshooting.html">程式除錯</a></li>
 </ul>
 
 <h3>簡介</h3>
@@ -86,7 +86,7 @@
 	<li><a href="./overview/appflow.html">程式流程圖</a></li>
 	<li><a href="./overview/mvc.html">模型-檢視-控制器</a></li>
 	<li><a href="./overview/goals.html">架構目標</a></li>
-</ul> 	
+</ul>
 
 
 </td>
